# k2payments

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  architecture.md  contributor.md  deny.toml  justfile  prd.md  start_dev.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/cla-signatures/version1/: .gitkeep
.github/workflows/: cargo-audit.yml  ci.yml  cla.yml  codeql.yml  dependency-review.yml  semgrep.yml
crates/mx20022-admin/: Cargo.toml  build.rs
crates/mx20022-admin/src/: auth.rs  controller.rs  dto.rs  grpc.rs  host.rs  http.rs  lib.rs  middleware.rs  rate_limit.rs  routes.rs  service.rs  tls.rs
crates/mx20022-channels/: Cargo.toml
crates/mx20022-channels/mx20022-channel-amqp/: Cargo.toml
crates/mx20022-channels/mx20022-channel-amqp/src/: lib.rs
crates/mx20022-channels/mx20022-channel-file/: Cargo.toml
crates/mx20022-channels/mx20022-channel-file/src/: lib.rs
crates/mx20022-channels/mx20022-channel-grpc/: Cargo.toml  build.rs
crates/mx20022-channels/mx20022-channel-grpc/proto/: channel.proto
crates/mx20022-channels/mx20022-channel-grpc/src/: lib.rs
crates/mx20022-channels/mx20022-channel-http/: Cargo.toml
crates/mx20022-channels/mx20022-channel-http/src/: lib.rs
crates/mx20022-channels/mx20022-channel-kafka/: Cargo.toml
crates/mx20022-channels/mx20022-channel-kafka/src/: lib.rs
crates/mx20022-channels/mx20022-channel-nats/: Cargo.toml
crates/mx20022-channels/mx20022-channel-nats/src/: lib.rs
crates/mx20022-channels/mx20022-channel-tcp/: Cargo.toml
crates/mx20022-channels/mx20022-channel-tcp/src/: lib.rs
crates/mx20022-channels/src/: auth.rs  lib.rs
crates/mx20022-cli/: Cargo.toml
crates/mx20022-cli/src/: main.rs
crates/mx20022-config/: Cargo.toml
crates/mx20022-config/src/: lib.rs
crates/mx20022-correlation/: Cargo.toml
crates/mx20022-correlation/src/: lib.rs
crates/mx20022-crypto/: Cargo.toml
crates/mx20022-crypto/src/: auth.rs  lib.rs
crates/mx20022-metrics/: Cargo.toml
crates/mx20022-metrics/src/: lib.rs
crates/mx20022-participants/: Cargo.toml
crates/mx20022-participants/src/: acknowledgement_builder.rs  business_rule_validator.rs  cbpr_rule_validator.rs  circuit_breaker.rs  duplicate_checker.rs  error_response_builder.rs  fednow_rule_validator.rs  lib.rs  message_logger.rs  rate_limiter.rs  routing_engine.rs  schema_validator.rs  sepa_rule_validator.rs  status_response_builder.rs
crates/mx20022-runtime/: Cargo.toml
crates/mx20022-runtime-core/: Cargo.toml
crates/mx20022-runtime-core/src/: context.rs  lib.rs  participant.rs  state.rs  tests_missing.rs  transaction_manager.rs
crates/mx20022-runtime/benches/: runtime_hot_paths.rs
crates/mx20022-runtime/src/: app.rs  application.rs  domain.rs  engine.rs  lib.rs  main.rs
crates/mx20022-runtime/tests/: e2e_pipeline.rs
crates/mx20022-session/: Cargo.toml
crates/mx20022-session/src/: lib.rs
crates/mx20022-store/: Cargo.toml
crates/mx20022-store/mx20022-store-postgres/: Cargo.toml
crates/mx20022-store/mx20022-store-postgres/src/: lib.rs
crates/mx20022-store/mx20022-store-rocksdb/: Cargo.toml
crates/mx20022-store/mx20022-store-rocksdb/src/: lib.rs
crates/mx20022-store/mx20022-store-sqlite/: Cargo.toml
crates/mx20022-store/mx20022-store-sqlite/migrations/: 0001_initial_schema.down.sql  0001_initial_schema.up.sql
crates/mx20022-store/mx20022-store-sqlite/seeds/: dev_seed.sql
crates/mx20022-store/mx20022-store-sqlite/src/: lib.rs  tests_missing.rs
crates/mx20022-store/src/: lib.rs
crates/mx20022-web/: Cargo.toml
crates/mx20022-web/src/: main.rs
deploy/docker/: DEPLOYMENT.md  Dockerfile
deploy/systemd/: mxruntime.service
docs/: ARCHITECTURE.md  OPERATIONS.md  PARTICIPANT_GUIDE.md  PLAN.md  PRD_SUMMARY.md  QUICKSTART.md  RELEASE.md  agent_context.db
docs/agents/: 2026-03-06T00-00-00Z__arch-review__ar.json  2026-03-06T00-00-00Z__code-quality-review__cr.json  2026-03-06T00-00-00Z__perf-analysis__perf.json  2026-03-06T00-00-00Z__security-audit__sec.json  2026-03-06T00-00-00Z__test-coverage-audit__ta.json  2026-03-06T00-01-00Z__security-audit__sec.json  2026-03-06T07-00-00Z__mx20022-code-review__cr.json  2026-03-06T07-30-00Z__mx20022-test-coverage__ta.json  2026-03-06T08-00-00Z__code-quality-review__cr.json  2026-03-06T12-00-00Z__arch-review__ar.json  2026-03-06T20-00-00Z__security-audit__sec.json  2026-03-06T21-30-00Z__test-coverage-audit__ta.json  2026-03-07T00-00-00Z__arch-review__ar.json  2026-03-07T00-00-00Z__perf-analysis__perf.json  2026-03-07T00-00-00Z__security-audit__sec.json  2026-03-07T00-00-00Z__test-coverage-audit__ta.json  2026-03-07T06-00-20Z__code-quality-review__cr.json
docs/api/: openapi.yaml
docs/data/: 01-conceptual-data-model.md  02-logical-schema.md  03-physical-sqlite-schema.md  04-migrations.md  05-seed-fixtures.md
docs/examples/: basic.toml  fednow-gateway.toml  mt-to-mx-bridge.toml  quickstart.toml
docs/examples/messages/: pacs008-minimal.xml
docs/legal/: CLA_SETUP.md  ICLA.md
proto/: admin.proto
