[package]
name = "mx20022-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
jsonwebtoken = "9"
mx20022-store = { path = "../mx20022-store" }
mx20022-metrics = { path = "../mx20022-metrics" }
serde_json = "1"
tokio.workspace = true
axum.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

[dev-dependencies]
mx20022-store-sqlite = { path = "../mx20022-store/mx20022-store-sqlite" }

[build-dependencies]
tonic-build = "0.12"
