[package]
name = "mx20022-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true
thiserror.workspace = true
jsonwebtoken = "9"
mx20022-store = { path = "../mx20022-store" }
mx20022-metrics = { path = "../mx20022-metrics" }
serde_json = "1"
tokio.workspace = true
axum.workspace = true
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio-rustls = "0.26"
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
subtle.workspace = true

[dev-dependencies]
mx20022-store-sqlite = { path = "../mx20022-store/mx20022-store-sqlite" }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
