[package]
name = "mx20022-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
jsonwebtoken = "10"
secrecy.workspace = true
subtle.workspace = true
