[package]
name = "mx20022-channels"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
mx20022-crypto = { path = "../mx20022-crypto" }
tokio.workspace = true
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
secrecy.workspace = true
