[package]
name = "mx20022-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mxctl"
path = "src/main.rs"

[dependencies]
mx20022-config = { path = "../mx20022-config" }
mx20022-admin = { path = "../mx20022-admin" }
mx20022-store = { path = "../mx20022-store" }
mx20022-store-sqlite = { path = "../mx20022-store/mx20022-store-sqlite" }
mx20022-store-postgres = { path = "../mx20022-store/mx20022-store-postgres" }
mx20022-store-rocksdb = { path = "../mx20022-store/mx20022-store-rocksdb" }
reqwest.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
prost-types.workspace = true
