[package]
name = "mx20022-runtime-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
mx20022-metrics = { path = "../mx20022-metrics" }
