[package]
name = "mx20022-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mx20022_runtime"
path = "src/lib.rs"

[[bin]]
name = "mxruntime"
path = "src/main.rs"

[dependencies]
mx20022-runtime-core = { path = "../mx20022-runtime-core" }
mx20022-channels = { path = "../mx20022-channels" }
mx20022-channel-http = { path = "../mx20022-channels/mx20022-channel-http", optional = true }
mx20022-channel-grpc = { path = "../mx20022-channels/mx20022-channel-grpc", optional = true }
mx20022-channel-file = { path = "../mx20022-channels/mx20022-channel-file", optional = true }
mx20022-channel-tcp = { path = "../mx20022-channels/mx20022-channel-tcp", optional = true }
mx20022-channel-nats = { path = "../mx20022-channels/mx20022-channel-nats", optional = true }
mx20022-channel-kafka = { path = "../mx20022-channels/mx20022-channel-kafka", optional = true }
mx20022-channel-amqp = { path = "../mx20022-channels/mx20022-channel-amqp", optional = true }
mx20022-store = { path = "../mx20022-store" }
mx20022-store-sqlite = { path = "../mx20022-store/mx20022-store-sqlite", optional = true }
mx20022-store-postgres = { path = "../mx20022-store/mx20022-store-postgres", optional = true }
mx20022-store-rocksdb = { path = "../mx20022-store/mx20022-store-rocksdb", optional = true }
mx20022-participants = { path = "../mx20022-participants" }
mx20022-config = { path = "../mx20022-config" }
mx20022-admin = { path = "../mx20022-admin" }
mx20022-metrics = { path = "../mx20022-metrics" }
mx20022-correlation = { path = "../mx20022-correlation" }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sha2 = "0.10"
secrecy.workspace = true

[features]
default = ["channel-http", "channel-grpc", "store-postgres", "store-sqlite"]
channel-http = ["dep:mx20022-channel-http"]
channel-grpc = ["dep:mx20022-channel-grpc"]
channel-kafka = ["dep:mx20022-channel-kafka"]
channel-amqp = ["dep:mx20022-channel-amqp"]
channel-file = ["dep:mx20022-channel-file"]
channel-nats = ["dep:mx20022-channel-nats"]
channel-tcp = ["dep:mx20022-channel-tcp"]
store-postgres = ["dep:mx20022-store-postgres"]
store-sqlite = ["dep:mx20022-store-sqlite"]
store-rocksdb = ["dep:mx20022-store-rocksdb"]
all-channels = ["channel-http", "channel-grpc", "channel-kafka", "channel-amqp", "channel-file", "channel-nats", "channel-tcp"]
all-stores = ["store-postgres", "store-sqlite", "store-rocksdb"]
full = ["all-channels", "all-stores"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[[bench]]
name = "runtime_hot_paths"
harness = false
