[package]
name = "mx20022-channel-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mx20022-channels = { path = "../../mx20022-channels" }
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
axum.workspace = true
reqwest.workspace = true
tower-http = { version = "0.6", features = ["cors"] }
