[package]
name = "mx20022-channel-kafka"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mx20022-channels = { path = "../../mx20022-channels" }
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
rdkafka = { version = "0.37", features = ["tokio"] }
futures-util = "0.3"
