[package]
name = "mx20022-channel-nats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mx20022-channels = { path = "../../mx20022-channels" }
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
async-nats = "0.39"
futures-util = "0.3"
