[package]
name = "mx20022-channel-tcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mx20022-channels = { path = "../../mx20022-channels" }
mx20022-crypto = { path = "../../mx20022-crypto" }
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
secrecy.workspace = true
