[package]
name = "mx20022-store-rocksdb"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mx20022-store = { path = "../../mx20022-store" }
async-trait.workspace = true
tracing.workspace = true
rocksdb = "0.22"
tokio.workspace = true
serde_json.workspace = true
